# telegram-bot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CREATE_TABLE.py  CREATE_TABLE.sql  Dockerfile  README.md  bot-config.env  bot.config  bot.config.SAMPLE  bottle_insert_alert.py  custom_filters.py  insert_alert.py  insert_host_alert.sh  insert_service_alert.sh  pyproject.toml  requirements.txt  send_alert.sh  send_host_alert.sh  send_nagios_alert.py  send_nagios_host_alert.py  setup.py  start_telegram_bot.py  test_insert_alert.py
.github/workflows/: deploy-lambda.yaml
extra/: bot-config.env  package-lambda  package-lambda-layer  run_local.py  scratch_add_gcal_events.py
src/: __init__.py
src/telegram_bot/: __init__.py  config_helper.py  webhook.py
src/telegram_bot/handlers/: crypto_quotes_handler.py  decorators.py  garage_door.py  google_calendar_handler.py  handler_base.py  messages.py  misc_handlers.py  temperature_data.py  unknown_handler.py
src/telegram_bot/handlers/nagios/: menu.py
telegram_bot/: config_helper.py  config_util.py  decorators.py  garage_door.py  handler_base.py  handlers.py  market_quotes.py  messages.py  nagios.py  start_telegram_bot.py  temperature_data.py  webhook.py
telegram_bot/handlers/: crypto_quotes_handler.py  decorators.py  garage_door.py  google_calendar_handler.py  handler_base.py  market_quotes.py  nagios_ack.py  temperature_data.py  unknown_handler.py
telegram_bot/handlers/nagios/: menu.py
test/: test_handlers.py
tests/: test_market_quotes.py  test_temperature_data.py
