[project]
authors = [{name = "avi", email = "avioza@gmail.com"}]
dependencies = [ "boto3>=1.35.49,<2", "arrow==1.3.0", "python-telegram-bot==21.5", "requests>=2.32.3,<3"]
description = "Add a short description here"
name = "telegram-bot"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = ["build>=1.2.2.post1,<2", "awscli>=1.35.15,<2", "black>=24.10.0,<25"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]